--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 .App {
   text-align: center;
 }
+
+#nftImage{
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#nftMetadataList{
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
