--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   margin: 0 auto;
 }
 
-.nftCollection{
+#nftCollection{
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
